condtional rendering for views dependent on authorization

--- a/frontend/static/src/App.css
+++ b/frontend/static/src/App.css
@@ -21,6 +21,15 @@ body {
   text-align: center;
 }
 
+.logout-button {
+  height: 50px;
+  width: 80px;
+}
+
+.register-button{
+  height: 50px;
+  width: 80px;
+}
 
 .chat-app-container {
   background-color: #4A678A;
