--- a/frontend/static/src/components/App.css
+++ b/frontend/static/src/components/App.css
@@ -5,11 +5,28 @@
 }
 
 body {
-  background-color: #394453;
+  background-color: #A6A6A6;
+  /* background-color: #394453; */
   /* background-color: aqua;
   background-image: linear-gradient(to bottom right, magenta, aqua);  */
 
 }
+
+.form-login {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media only screen and (max-height: 600px) {
+  .form-login{
+    margin-top: 15px;
+    margin-bottom: 20px;
+  }
+}
+
 
 .registration-input {
   /* background-color: #74ACE8; */
@@ -21,6 +38,8 @@ body {
   /* background-color: #B87AD3; */
   background-color: #FFF;
   text-align: center;
+  height: 30px;
+  font-size: 16px;
 }
 
 .toggle-login{
@@ -31,6 +50,11 @@ body {
 .toggle-register{
   height: 50px;
   width: 80px;
+  margin-bottom: 100px;
+}
+
+@media only screen and (max-height: 600px) {
+  .toggle-register{margin-bottom: 15px;}
 }
 
 .logout-button {
@@ -43,10 +67,12 @@ body {
 }
 
 .chat-app-container {
-  background-color: #4A678A;
+  /* background-color: #4A678A; */
+  /* background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); */
+  background: linear-gradient(45deg, #405DE6, #5851DB, #833AB4, #C12584, #E1306C, #FD1D1D);
   width: 75%;
   margin: 30px;
-  border: 5px solid #202A36;
+  border: 5px solid #272626;
   box-shadow: 2px 2px 5px #292C33;
   border-radius: 35px;
   display: flex;
@@ -56,8 +82,8 @@ body {
 }
 
 .chat-app-header {
-  background-color: #5B7C9F;
-  border-radius: 35px 30px 0px 0px;
+  background-color: #2B2B2B;
+  border-radius: 30px 30px 0px 0px;
   color: #FFF;
   height: 90px;
   width: 100%;
@@ -130,9 +156,11 @@ li:nth-child(odd) .instant-message-text-display {
 }
 
 .user_image{
-  /* background-color: #65D46E; */
-  background-color: aqua; /* For browsers that do not support gradients */
-  background-image: linear-gradient(to bottom right, magenta, aqua);
+
+  /* background-color: aqua;  */
+  /* For browsers that do not support gradients */
+  /* background-image: linear-gradient(to bottom right, magenta, aqua); */
+  background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
   height: 65px;
   width: 65px;
   color: #FFF;
@@ -149,7 +177,8 @@ li:nth-child(odd) .instant-message-text-display {
 
 li:nth-child(odd) .user_image{
   background-color: magenta; /* For browsers that do not support gradients */
-  background-image: linear-gradient(to bottom right, aqua, magenta);
+  /* background-image: linear-gradient(to bottom right, aqua, magenta); */
+  background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
 }
 
 label{
